Save & Open project

--- a/FiddlerAddon/FiddlerAddon/FiddlerAddon.csproj
+++ b/FiddlerAddon/FiddlerAddon/FiddlerAddon.csproj
@@ -61,6 +61,11 @@
     </Compile>
     <Compile Include="DebugProjectModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -70,6 +75,10 @@
   <ItemGroup>
     <EmbeddedResource Include="DebuggerConsoleView.resx">
       <DependentUpon>DebuggerConsoleView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
