--- a/FiddlerAddon/FiddlerAddon/FiddlerAddon.csproj
+++ b/FiddlerAddon/FiddlerAddon/FiddlerAddon.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="Fiddler">
       <HintPath>C:\Program Files (x86)\Fiddler2\Fiddler.exe</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="LinqBridge">
       <HintPath>lib\LinqBridge.dll</HintPath>
@@ -47,6 +48,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="Timeline">
       <HintPath>C:\Program Files (x86)\Fiddler2\Scripts\Timeline.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
