--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "optimist": "0.2.6",
     "node-watch": "0.2.4",
     "prompt": "0.2.9",
-    "cheerio": "^0.13.1"
+    "cheerio": "^0.13.1",
+    "js-beautify": "^1.4.2"
   },
   "version": "0.0.0"
 }
